--- a/src/mastodon-material/theme/forms.scss
+++ b/src/mastodon-material/theme/forms.scss
@@ -90,7 +90,7 @@
         color: $ui-text-color;
         background-color: $dropdown-field-bg-color;
         border: none;
-        border-radius: $menu-radius $menu-radius 0 0;
+        border-radius: $menu-radius;
         padding-left: 16px;
         padding-right: 40px;
         height: 40px;
