--- a/src/mastodon-material/theme/material-icons.scss
+++ b/src/mastodon-material/theme/material-icons.scss
@@ -257,7 +257,8 @@ button.icon-button.reblogPrivate:hover i.fa-retweet {
 .fa.fa-envelope.column-header__icon.fa-fw,
 .fa.fa-star.column-header__icon.fa-fw,
 .fa.fa-list.column-header__icon.fa-fw,
-.fa.fa-list-ul.column-header__icon.fa-fw { vertical-align: text-bottom }
+.fa.fa-list-ul.column-header__icon.fa-fw,
+.fa.fa-hashtag.column-header__icon.fa-fw { vertical-align: text-bottom }
 
 // top bar icons in single column mode
 .tabs-bar__link .fa {
